update git workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Full Stack to EC2
 on:
   push:
     branches:
-      - main    # หรือ branch ที่ใช้จริง
+      - main
 
 jobs:
   deploy:
