--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,38 @@
-name: Deploy Full Stack to EC2
+name: Deploy Frontend to EC2
 
 on:
   push:
     branches:
-      - main
+      - main   # หรือ branch ที่คุณ deploy จริง
 
 jobs:
   deploy:
-    runs-on: self-hosted
+    runs-on: self-hosted   # ใช้ runner บน EC2
 
     steps:
-      - name: Deploy to EC2 via SSH
-        uses: appleboy/ssh-action@v0.1.8
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            set -e
-            cd ${{ secrets.EC2_PATH }}
+      - name: Checkout
+        uses: actions/checkout@v4
 
-            echo "🔄 Pulling latest code..."
-            git fetch --all
-            git reset --hard origin/main
+      - name: Deploy Frontend via Docker Compose
+        run: |
+          set -e
 
-            echo "🐳 Rebuilding Docker containers..."
-            docker-compose pull || true
-            docker-compose build --no-cache
-            docker-compose up -d --remove-orphans
+          echo "🔄 Pulling latest Frontend code..."
+          cd /home/ubuntu/pet-frontend
+          git fetch --all
+          git reset --hard origin/main
 
-            echo "🧹 Cleaning up old images..."
-            docker image prune -f
+          echo "🌐 Building Frontend container..."
+          cd /home/ubuntu
 
-            echo "✅ Deployment completed!"
+          # ✅ โหลดค่าจาก .env เพื่อใช้กับ docker-compose
+          export $(cat .env | xargs)
+
+          # ✅ build & up เฉพาะ frontend เท่านั้น
+          docker-compose build petterrain_frontend
+          docker-compose up -d petterrain_frontend
+
+          # 🧹 ล้าง image เก่าที่ไม่ได้ใช้
+          docker image prune -f
+
+          echo "✅ Frontend Deployment completed successfully!"
