--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_ENDPOINT=http://localhost:8080/api
+# VITE_API_ENDPOINT=http://localhost:8080/api
 
-# VITE_API_ENDPOINT=http://3.27.64.101:8080/api
+VITE_API_ENDPOINT=http://3.27.64.101:8080/api
