--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^7.11.0",
     "recharts": "^3.7.0",
     "styled-components": "^6.1.19",
+    "sweetalert2": "^11.26.19",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
